reduce image size, fix grid alignment

--- a/src/pages/projects/1/Project1.module.css
+++ b/src/pages/projects/1/Project1.module.css
@@ -65,7 +65,7 @@
 }
 
 .mirrors {
-    grid-area: 6/7/9/13;
+    grid-area: 6/7/8/13;
 }
 
 .handle {
